--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "requirejs": "^2.1.15"
   },
   "devDependencies": {
-    "karma": "^0.12.24",
-    "karma-jasmine": "^0.2.2",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-traceur-preprocessor": "^0.4.0",
-    "karma-requirejs": "^0.2.2",
     "assert": "angular/assert#dist",
     "gulp": "^3.8.9",
+    "gulp-connect": "^2.0.6",
+    "gulp-rename": "^1.2.0",
     "gulp-traceur": "^0.13.0",
-    "gulp-connect": "^2.0.6"
+    "karma": "^0.12.24",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-jasmine": "^0.2.2",
+    "karma-requirejs": "^0.2.2",
+    "karma-traceur-preprocessor": "^0.4.0"
   },
   "scripts": {
     "test": "karma start --single-run"
