Set up sourcemaps with WebStorm
- add WebStorm project config files (incl. AtScript watcher)
- Karma consumes files transpiled by the watcher (instead of using preprocessor)

--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
     "typeAssertions": true,
     "typeAssertionModule": "assert",
     "annotations": true,
-    "sourceMaps": true
+    "sourceMaps": "file"
   }
 }
