--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp": "^3.8.9",
     "gulp-connect": "^2.0.6",
     "gulp-rename": "^1.2.0",
-    "gulp-traceur": "realistschuckle/gulp-traceur#master",
+    "gulp-traceur": "vojtajina/gulp-traceur#fix-sourcemaps",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
     "karma-jasmine": "^0.2.2",
